<resources>
    <string name="app_name">Money Management</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_home">Home</string>
    <string name="create_account">Create Account</string>
    <string name="create_pin">Create Pin</string>
    <string name="title_detail">Detail List</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="money_management">Money Management</string>
    <string name="total_account">Total Account</string>
    <string name="pay_to">Pay to</string>
    <string name="pay_for">Pay For</string>
    <string name="remove_transaction">Remove Transaction</string>
    <string name="get_from">Get From</string>
    <string name="get_for">"Get For"</string>
    <string name="required_amount">"Please enter the amount"</string>
    <string name="csv_file_generated_text">"CSV file generated"</string>
    <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="csv_file_not_generated_text">"CSV file not generated"</string>
    <string name="dummy">ca-app-pub-3940256099942544/6300978111</string>

    <!--Live -->
    <string name="ads_home_screen">ca-app-pub-2786039813382028/7689465327</string>
    <string name="ads_create_screen">ca-app-pub-2786039813382028/5706299815</string>
    <string name="ads_setting_screen">ca-app-pub-2786039813382028/3750220318</string>
    <string name="ads_lock_screen">ca-app-pub-2786039813382028/9941607036</string>
    <string name="ads_all_accounts_list">ca-app-pub-2786039813382028/5191843237</string>

    <string name="ads_full_screen_ads">ca-app-pub-2786039813382028/6621555921</string>

</resources>