<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aditechnology.moneymanagement.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_account_to_createfragment"
            app:destination="@id/create_account" />

        <action
            android:id="@+id/action_account_to_expense_income"
            app:destination="@id/navigation_expense_income" />
    </fragment>


    <fragment
        android:id="@+id/navigation_expense_income"
        android:name="com.aditechnology.moneymanagement.ui.home.ExpenseHomePagerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_expense_income_fragment" >

    </fragment>


    <fragment
        android:id="@+id/navigation_details_list_fragment"
        android:name="com.aditechnology.moneymanagement.ui.home.DetailListFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_details_list" >

        <action
            android:id="@+id/action_account_to_expense_income"
            app:destination="@id/navigation_expense_income" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.aditechnology.moneymanagement.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_accounts">
    <action
        android:id="@+id/action_account_to_createfragment"
        app:destination="@id/create_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.aditechnology.moneymanagement.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/create_account"
        android:name="com.aditechnology.moneymanagement.ui.account.CreateAccountFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_create_account">

        <action
            android:id="@+id/action_popup_back"
            app:popUpTo="@+id/registrationSuccessFragment" />



    </fragment>

</navigation>